# metabuildpack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.base  Dockerfile.build  README.md  noop-spec.json  spec.json
.github/workflows/: rust.yml
builder/: builder.toml
builder/stack/: buildstack.sh
scripts/: buildstack.sh
src/: build.rs  buildspec.rs  context.rs  detect.rs  main.rs  scriptrun.rs  traceextractor.rs  tracer.rs
testing/: runtest.sh
testing/builder/: buildbuilder.sh  builder.toml
testing/builder/stack/: Dockerfile.base  Dockerfile.build  buildstack.sh
testing/samplebuildpack/: buildpack.toml  test.json
