[package]
name = "metabuildpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0"
serde = {version= "1.0", features = ["derive"]}
handlebars = "3"
fs_extra = "1.2.0"
curl = "0.4.39"
anyhow = "1.0.44"

opentelemetry = { version= "*", features = ["serialize", "async-std", "trace"] }
opentelemetry-jaeger = { version= "*", features = ["isahc", "collector_client", "isahc_collector_client"] }
