[package]
name = "metabuildpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.81"
serde = {version= "1.0.137", features = ["derive"]}
handlebars = "4.3.1"
fs_extra = "1.2.0"
curl = "0.4.43"
anyhow = "1.0.57"

opentelemetry = { version = "0.17.0", features = ["serialize", "rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics"] }
tokio = { version = "1.0", features = ["full"] }
